--- a/styles/globals.css
+++ b/styles/globals.css
@@ -116,10 +116,17 @@
 		@apply mb-8;
 	}
 	.CourseMaterial_contents :is(table, th, td) {
-		@apply p-2 border-2 border-secondary-2;
+		@apply py-2 px-4 border-2 border-secondary-2;
 	}
 	.CourseMaterial_contents th {
 		@apply p-2 border-2 bg-secondary-1;
+	}
+	.CourseMaterial_contents ol {
+		list-style-type: decimal;
+		@apply ml-8;
+	}
+	.CourseMaterial_contents hr {
+		@apply py-2;
 	}
 	.GraphContainer {
 		@apply flex w-full justify-center pb-8;
