--- a/styles/globals.css
+++ b/styles/globals.css
@@ -53,7 +53,7 @@
 	}
 
 	.p-adapt-sm {
-		@apply px-16 sm:px-16 md:px-32 lg:px-64 xl:px-96 2xl:px-96;
+		@apply px-16 sm:px-16 md:px-32 lg:px-64;
 	}
 }
 @tailwind base;
@@ -134,6 +134,15 @@
 	}
 	.CourseMaterial_contents li {
 		@apply ml-8 my-4;
+	}
+	.CourseMaterial_contents img {
+		@apply mx-auto;
+	}
+	.CourseMaterial_contents .katex-display {
+		@apply !my-0;
+	}
+	.CourseMaterial_contents .math-display {
+		@apply mb-8;
 	}
 	.MatchBox div {
 		min-width: 12rem;
