--- a/styles/globals.css
+++ b/styles/globals.css
@@ -167,6 +167,57 @@
 		> .CourseMaterial_index {
 		@apply text-secondary-4;
 	}
+	/** https://cssloaders.github.io/  */
+	.Loader {
+		width: 48px;
+		height: 48px;
+		border-radius: 50%;
+		position: relative;
+		animation: rotate 1s linear infinite;
+	}
+	.Loader::before {
+		width: 48px;
+		height: 48px;
+		border: 4px solid;
+		@apply border-primary-5;
+		content: "";
+		inset: 0;
+		box-sizing: border-box;
+		position: absolute;
+		border-radius: 50%;
+		animation: prixClipFix 2s linear infinite;
+	}
+
+	@keyframes rotate {
+		100% {
+			transform: rotate(360deg);
+		}
+	}
+
+	@keyframes prixClipFix {
+		0% {
+			clip-path: polygon(50% 50%, 0 0, 0 0, 0 0, 0 0, 0 0);
+		}
+		25% {
+			clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 0, 100% 0, 100% 0);
+		}
+		50% {
+			clip-path: polygon(
+				50% 50%,
+				0 0,
+				100% 0,
+				100% 100%,
+				100% 100%,
+				100% 100%
+			);
+		}
+		75% {
+			clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 100%);
+		}
+		100% {
+			clip-path: polygon(50% 50%, 0 0, 100% 0, 100% 100%, 0 100%, 0 0);
+		}
+	}
 }
 @tailwind components;
 @layer utilities {
