--- a/styles/globals.css
+++ b/styles/globals.css
@@ -221,33 +221,6 @@
 }
 @tailwind components;
 @layer utilities {
-	.font-thin {
-		font-variation-settings: "wght" 100;
-	}
-	.font-extralight {
-		font-variation-settings: "wght" 200;
-	}
-	.font-light {
-		font-variation-settings: "wght" 300;
-	}
-	.font-normal {
-		font-variation-settings: "wght" 400;
-	}
-	.font-medium {
-		font-variation-settings: "wght" 500;
-	}
-	.font-semibold {
-		font-variation-settings: "wght" 600;
-	}
-	.font-bold {
-		font-variation-settings: "wght" 700;
-	}
-	.font-extrabold {
-		font-variation-settings: "wght" 800;
-	}
-	.font-black {
-		font-variation-settings: "wght" 900;
-	}
 	.bg-primary-1 {
 		@apply bg-orange-100;
 	}
@@ -386,6 +359,34 @@
 	}
 	.bg-danger-9 {
 		@apply bg-red-900;
+	}
+
+	.bg-information-1 {
+		@apply bg-blue-100;
+	}
+	.bg-information-2 {
+		@apply bg-blue-200;
+	}
+	.bg-information-3 {
+		@apply bg-blue-300;
+	}
+	.bg-information-4 {
+		@apply bg-blue-400;
+	}
+	.bg-information-5 {
+		@apply bg-blue-500;
+	}
+	.bg-information-6 {
+		@apply bg-blue-600;
+	}
+	.bg-information-7 {
+		@apply bg-blue-700;
+	}
+	.bg-information-8 {
+		@apply bg-blue-800;
+	}
+	.bg-information-9 {
+		@apply bg-blue-900;
 	}
 
 	.border-primary-1 {
@@ -528,6 +529,34 @@
 		@apply border-red-900;
 	}
 
+	.border-information-1 {
+		@apply border-blue-100;
+	}
+	.border-information-2 {
+		@apply border-blue-200;
+	}
+	.border-information-3 {
+		@apply border-blue-300;
+	}
+	.border-information-4 {
+		@apply border-blue-400;
+	}
+	.border-information-5 {
+		@apply border-blue-500;
+	}
+	.border-information-6 {
+		@apply border-blue-600;
+	}
+	.border-information-7 {
+		@apply border-blue-700;
+	}
+	.border-information-8 {
+		@apply border-blue-800;
+	}
+	.border-information-9 {
+		@apply border-blue-900;
+	}
+
 	.outline-primary-1 {
 		@apply outline-orange-100;
 	}
@@ -668,6 +697,34 @@
 		@apply outline-red-900;
 	}
 
+	.outline-information-1 {
+		@apply outline-blue-100;
+	}
+	.outline-information-2 {
+		@apply outline-blue-200;
+	}
+	.outline-information-3 {
+		@apply outline-blue-300;
+	}
+	.outline-information-4 {
+		@apply outline-blue-400;
+	}
+	.outline-information-5 {
+		@apply outline-blue-500;
+	}
+	.outline-information-6 {
+		@apply outline-blue-600;
+	}
+	.outline-information-7 {
+		@apply outline-blue-700;
+	}
+	.outline-information-8 {
+		@apply outline-blue-800;
+	}
+	.outline-information-9 {
+		@apply outline-blue-900;
+	}
+
 	.text-primary-1 {
 		@apply text-orange-100;
 	}
@@ -806,6 +863,34 @@
 	}
 	.text-danger-9 {
 		@apply text-red-900;
+	}
+
+	.text-information-1 {
+		@apply text-blue-100;
+	}
+	.text-information-2 {
+		@apply text-blue-200;
+	}
+	.text-information-3 {
+		@apply text-blue-300;
+	}
+	.text-information-4 {
+		@apply text-blue-400;
+	}
+	.text-information-5 {
+		@apply text-blue-500;
+	}
+	.text-information-6 {
+		@apply text-blue-600;
+	}
+	.text-information-7 {
+		@apply text-blue-700;
+	}
+	.text-information-8 {
+		@apply text-blue-800;
+	}
+	.text-information-9 {
+		@apply text-blue-900;
 	}
 }
 @tailwind utilities;
