--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,12 +5,18 @@
 @layer base {
   html,
   body {
+    height: 100%;
     padding: 0 !important;
     margin: 0 !important;
     font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
       Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
     color: black;
   }
+
+  #__next {
+    height: 100%;
+  }
+
   *:not(:is(.base, .mord, .katex *)) {
     font-family: "Inter";
   }
@@ -85,6 +91,12 @@
   }
   .Icon-xl > svg {
     @apply w-8 h-8;
+  }
+  .CourseCard:focus * {
+    outline: none !important;
+  }
+  .CourseCard:hover img {
+    opacity: 0.8 !important;
   }
   .SlantedBackgroundTemplate {
     width: 100%;
