--- a/styles/globals.css
+++ b/styles/globals.css
@@ -50,7 +50,7 @@
 
   body,
   .p {
-    @apply text-sm md:text-base;
+    @apply text-base;
   }
 
   .w-exclude {
@@ -58,7 +58,7 @@
   }
 
   .p-adapt-sm {
-    @apply px-16 sm:px-16 md:px-32 lg:px-64;
+    @apply px-8 sm:px-8 md:px-16 lg:px-32 xl:px-64;
   }
   /* width */
   ::-webkit-scrollbar {
@@ -92,12 +92,6 @@
   .Icon-xl > svg {
     @apply w-8 h-8;
   }
-  .CourseCard:focus * {
-    outline: none !important;
-  }
-  .CourseCard:hover img {
-    opacity: 0.8 !important;
-  }
   .SlantedBackgroundTemplate {
     width: 100%;
     height: 100%;
@@ -125,6 +119,16 @@
       var(--gradient-2) 100%
     );
     clip-path: polygon(0 0, 100% 0, 100% 75%, 0% 100%);
+  }
+  .CourseCard:hover img,
+  .CourseCard_link:focus img {
+    opacity: 0.75 !important;
+  }
+  @media (max-width: 1023px) {
+    #CourseMaterial_side h2,
+    p {
+      width: calc(100% - 2.5rem);
+    }
   }
   .Course_nextProgress {
     left: 0.8rem;
@@ -305,31 +309,31 @@
   }
 
   .bg-secondary-1 {
-    @apply bg-gray-100;
+    @apply bg-zinc-100;
   }
   .bg-secondary-2 {
-    @apply bg-gray-200;
+    @apply bg-zinc-200;
   }
   .bg-secondary-3 {
-    @apply bg-gray-300;
+    @apply bg-zinc-300;
   }
   .bg-secondary-4 {
-    @apply bg-gray-400;
+    @apply bg-zinc-400;
   }
   .bg-secondary-5 {
-    @apply bg-gray-500;
+    @apply bg-zinc-500;
   }
   .bg-secondary-6 {
-    @apply bg-gray-600;
+    @apply bg-zinc-600;
   }
   .bg-secondary-7 {
-    @apply bg-gray-700;
+    @apply bg-zinc-700;
   }
   .bg-secondary-8 {
-    @apply bg-gray-800;
+    @apply bg-zinc-800;
   }
   .bg-secondary-9 {
-    @apply bg-gray-900;
+    @apply bg-zinc-900;
   }
 
   .bg-success-1 {
