--- a/styles/globals.css
+++ b/styles/globals.css
@@ -125,9 +125,12 @@
     opacity: 0.75 !important;
   }
   @media (max-width: 1023px) {
-    #CourseMaterial_side h2,
-    p {
-      width: calc(100% - 2.5rem);
+    #CourseMaterial_side p {
+      max-width: calc(100% - 2.5rem);
+    }
+    #CourseMaterial_side > div > div :is(a, h2) {
+      width: min-content;
+      max-width: calc(100% - 2.5rem);
     }
   }
   .Course_nextProgress {
@@ -225,6 +228,17 @@
     position: absolute;
     border-radius: 50%;
     animation: prixClipFix 2s linear infinite;
+  }
+
+  @keyframes toastDecay {
+    0% {
+      height: max-content;
+      transform: scale(1);
+    }
+    100% {
+      height: 0;
+      transform: scale(0);
+    }
   }
 
   @keyframes rotate {
